@@ -162,6 +162,7 @@ since 1999.  If I missed your name, let me know.
 * Martin Mielke
 * Christian Mies
 * Gary Miller
+* James Moseley
 * Tobias Mucke
 * Gerd Mueller
 * Bob (Netshell)
